--- a/src/styles.css
+++ b/src/styles.css
@@ -17,12 +17,12 @@
 
 h1 {
   font-family: "Tangerine", serif;
-  color: white;
+  /* color: white; */
   font-size: 50px;
 }
 
 p {
   font-family: "Della Respira", serif;
-  color: white;
+  /* color: white; */
   font-size: 20px;
 }
