--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Della+Respira&family=Tangerine&display=swap');
 
+/* Defining colour variables and their colour codes here */
+:root {
+  /* Background */
+  --bg-body: #121212;
+  --bg-card: #1E1E1E;
+
+  /* Text */
+  --text-colour-primary:   rgba(255, 255, 255, 0.87);
+  --text-colour-secondary: #B3B3B3;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+/* Base */
+html, body {
+  height: 100%;
+}
+/* Allow normal page scroll */
+body {
+  background-color: var(--bg-body);
+  color: var(--text-colour-primary);
+  padding: 0;
+  overflow: auto; /* was: hidden */
+  -webkit-tap-highlight-color: transparent;
 }
 
 .card {
