--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -2,8 +2,9 @@
 .reading-grid {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   gap: 20px;
-  width: 100%;
+  width: 100vw;
 }
 
 /* Top row: cards */
