--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   gap: 20px;
   width: 100%;
-  border-color: solid 1px blue;
+  border: solid 1px blue;
 }
 
 /* Top row: cards */
