--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -1,10 +1,12 @@
 /* Overall layout container */
+
+/* TODO: Equally space cards along the screen, I dont know why it doesn't do that */
+
 .reading-grid {
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 100%;
-  border: solid 1px blue;
 }
 
 /* Top row: cards */
