--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -12,6 +12,7 @@
 /* Top row: cards */
 .card-row {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   gap: 15px;
   width: 100%;
