--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -1,7 +1,6 @@
 /* Overall layout container */
 
 /* TODO: Equally space cards along the screen, I dont know why it doesn't do that */
-
 .reading-grid {
   display: flex;
   flex-direction: column;
@@ -12,7 +11,6 @@
 /* Top row: cards */
 .card-row {
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
   gap: 15px;
   width: 100%;
@@ -27,7 +25,7 @@
   display: flex;
   justify-content: space-around;
   gap: 15px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .info-col {
