--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,10 @@ p {
   /* color: white; */
   font-size: 20px;
 }
+
+.ScreenContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
