--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,17 @@ p {
   justify-content: center;
   flex-direction: column;
 }
+
+.gypsy-bg-img {
+  background-image: url('/Tarot-Reading/GypsyLady.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.crystalBall-bg-img {
+  background-image: url('/Tarot-Reading/CrystalBall.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
