--- a/src/styles.css
+++ b/src/styles.css
@@ -58,16 +58,19 @@ p {
   flex-direction: column;
 }
 
+.bg-img {
+  width: 100vw;   /* 100% of viewport width */
+  height: 100vh;  /* 100% of viewport height */
+  background-size: cover;      /* fill the screen */
+  background-position: center; /* center image */
+  background-repeat: no-repeat;
+}
+
 .gypsy-bg-img {
   background-image: url('/Tarot-Reading/GypsyLady.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+
 }
 
 .crystalBall-bg-img {
   background-image: url('/Tarot-Reading/CrystalBall.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
