bg fullscreen attemp 3

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,6 @@
   --text-colour-secondary: #B3B3B3;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 /* Base */
 html, body {
   height: 100%;
@@ -60,8 +53,8 @@ p {
 }
 
 .bg-img {
-  width: 100%;   /* 100% of viewport width */
-  height: 100%;  /* 100% of viewport height */
+  width: 100vw;   /* 100% of viewport width */
+  height: 100vh;  /* 100% of viewport height */
   background-size: cover;      /* fill the screen */
   background-position: center; /* center image */
   background-repeat: no-repeat;
