--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -92,7 +92,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px 80px;
+  /* padding: 40px 80px; */
   box-sizing: border-box;
 }
 
