--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -87,7 +87,7 @@
 
 /* page container */
 .reading-page {
-  min-height: 100vh;
+  /* min-height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
