--- a/src/styles.css
+++ b/src/styles.css
@@ -62,10 +62,15 @@ p {
   background-size: cover;      /* fill the screen */
   background-position: center; /* center image */
   background-repeat: no-repeat;
+
+  position: relative;
 }
 
 /* Darkens the image */
 .bg-img::before {
+  content: "";                /* required or overlay won't appear */
+  position: absolute;
+  inset: 0;                   /* top:0 right:0 bottom:0 left:0 */
   background-color: rgba(0, 0, 0, 0.5); /* change 0.5 to make darker or lighter */
   z-index: 1;
 }
