--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -78,7 +78,7 @@
 
 /* page container */
 .reading-page {
-  /* min-height: 100%; */
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -88,12 +88,14 @@
 
 .reading-top {
   display: flex;
-  width: 80%;
-  align-items: center;
-  justify-content: space-between;
+  width: 100%;
 
   /* Required or all the cards just shoot upward off of the screen */
-  max-width: 1000px;
+  max-width: 1100px;
+
+  align-items: center;
+  justify-content: space-between;
+  /* gap: 80px; */
 }
 
 /* cards stacked vertically */
