--- a/src/Screens/FateReading.css
+++ b/src/Screens/FateReading.css
@@ -86,12 +86,13 @@
   box-sizing: border-box;
 }
 
+/* Card Container */
 .reading-top {
   display: flex;
   width: 100%;
 
-  /* Required or all the cards just shoot upward off of the screen */
   max-width: 1100px;
+  gap: 80px;
 
   align-items: center;
   justify-content: space-between;
