--- a/src/styles.css
+++ b/src/styles.css
@@ -83,10 +83,10 @@ p {
 }
 
 .gypsy-bg-img {
-  background-image: url('/Tarot-Reading/GypsyLady.jpg');
+  background-image: url('/GypsyLady.jpg');
 
 }
 
 .crystalBall-bg-img {
-  background-image: url('/Tarot-Reading/CrystalBall.jpg');
+  background-image: url('/CrystalBall.jpg');
 }
