--- a/src/styles.css
+++ b/src/styles.css
@@ -49,7 +49,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
   z-index: 2;
 
