removed debug box for lazy susan

--- a/src/Screens/LazySusan.css
+++ b/src/Screens/LazySusan.css
@@ -103,5 +103,4 @@
 
 /* ---------------- Debug / Optional ---------------- */
 /* Remove these once centering is verified */
-.lazy-susan-wrapper { border: 1px solid red; }
-.lazy-susan-wheel { /* background: rgba(0,255,0,0.1); */ }
+/*.lazy-susan-wrapper { border: 1px solid red; } */
