--- a/src/Screens/QuestionHistory.css
+++ b/src/Screens/QuestionHistory.css
@@ -111,6 +111,7 @@
 
   font-size: 0.6rem;
   letter-spacing: 0.14em;
+  font-family: var(--font-body);
   text-transform: uppercase;
   font-weight: 500;
 
